--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
       </header>
       <div class="card">
         <div class="card-header">
-          <h2>Generate a Password</h2>
+          <h2>Do you need a new password?</h2>
         </div>
         <div class="card-body">
           <textarea
-            readonly
             id="password"
-            placeholder="Your Secure Password"
+            placeholder=""
             aria-label="Generated Password"
           ></textarea>
         </div>
