--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
       </header>
       <div class="card">
         <div class="card-header">
-          <h2>Do you need a new password?</h2>
+          <h2>Generate a Password</h2>
         </div>
         <div class="card-body">
           <textarea
+            readonly
             id="password"
-            placeholder=""
+            placeholder="Your Secure Password"
             aria-label="Generated Password"
           ></textarea>
         </div>
